syntax = "proto3";

option go_package = "./user_service_proto";

service UserService {
    rpc SignUp(UserSignUpRequest) returns (UserSignUpResponse);
    rpc SignIn(UserSignInRequest) returns (UserSignInResponse);
}

message UserSignUpRequest {
    string username = 1;
    string password = 2;
    string confirm_password = 3;
}

message UserSignUpResponse {
    int32 code = 1;
}

message UserSignInRequest {
    string username = 1;
    string password = 2;
}

message UserSignInResponse {
    int32 code = 1;
    int64 id = 2;
    int64 uuid = 3;
    string username = 4;
    string create_time = 6;
    string update_time = 7;
    string token = 8;
}